--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -780,6 +780,7 @@
         "posting_time_relative": "Pokaż czas względny w postach",
         "posting_visibility_default": "Domyślna widoczność posta",
         "principal_public_disabled": "Wyłącz poziom dostępu \"Publiczny\"",
+        "reactions_expand-all": "Zawsze pokazuj pełną listę reakcji",
         "reactions_negative_disabled": "Dostępne reakcje \"Przeciwny\"",
         "reactions_positive_disabled": "Dostępne reakcje \"Popieram\"",
         "rich-text-editor_link-previews_max-automatic": "Maksymalna liczba automatycznie utworzonych podglądów linków",
