--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -780,6 +780,7 @@
         "posting_time_relative": "Показывать в постах относительное время",
         "posting_visibility_default": "Посты видны (по умолчанию)",
         "principal_public_disabled": "Выключить уровень доступа \"Для всех\"",
+        "reactions_expand-all": "Всегда показывать полный список реакций",
         "reactions_negative_disabled": "Используемые неодобрительные реакции",
         "reactions_positive_disabled": "Используемые одобрительные реакции",
         "rich-text-editor_link-previews_max-automatic": "Максимальное число ссылок, для которых автоматически создаётся предпросмотр",
