New negative reactions.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -559,6 +559,7 @@
     "bebe": "Be-be",
     "boring": "Boring",
     "brilliant": "Brilliant",
+    "chill-out": "Chill out",
     "congrats": "Congrats",
     "cry": "Cry",
     "damn": "Damn",
@@ -568,6 +569,8 @@
     "dislike": "Dislike",
     "enjoy": "Enjoy",
     "facepalm": "Facepalm",
+    "fake": "Fake",
+    "get-lost": "Get lost",
     "get-well": "Get well",
     "good-trip": "Good trip",
     "haha": "Ha-ha",
@@ -582,13 +585,15 @@
     "like": "Like",
     "lol": "LOL",
     "love": "Love",
+    "naive": "Naive",
     "popcorn": "Popcorn",
     "sad": "Sad",
     "super": "Super",
     "sweet": "Sweet",
     "tired": "Tired",
     "too-long": "Too long",
-    "wow": "Wow"
+    "wow": "Wow",
+    "wrong": "Wrong"
   },
   "read-and-agree-with": "I read and agree with",
   "read-more": "Read more...",
