--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -559,6 +559,7 @@
     "bebe": "Бе-бе",
     "boring": "Скучно",
     "brilliant": "Великолепно",
+    "chill-out": "Остынь",
     "congrats": "Поздравляю",
     "cry": "Реву",
     "damn": "Чёрт",
@@ -568,6 +569,8 @@
     "dislike": "Не нравится",
     "enjoy": "Развлекайся",
     "facepalm": "Фейспалм",
+    "fake": "Фейк",
+    "get-lost": "Уйди",
     "get-well": "Выздоравливай",
     "good-trip": "Хорошей поездки",
     "haha": "Ха-ха",
@@ -582,13 +585,15 @@
     "like": "Нравится",
     "lol": "Ржу",
     "love": "Люблю",
+    "naive": "Наивно",
     "popcorn": "Попкорн",
     "sad": "Грустно",
     "super": "Супер",
     "sweet": "Очаровательно",
     "tired": "Устал",
     "too-long": "Длинно",
-    "wow": "Ого"
+    "wow": "Ого",
+    "wrong": "Неверно"
   },
   "read-and-agree-with": "Я прочёл и согласен с",
   "read-more": "Читать дальше...",
