--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -559,6 +559,7 @@
     "bebe": "Бє-бє",
     "boring": "Нудно",
     "brilliant": "Чудово",
+    "chill-out": "Розслабся",
     "congrats": "Вітаю",
     "cry": "Реву",
     "damn": "Чорт",
@@ -568,6 +569,8 @@
     "dislike": "Не подобається",
     "enjoy": "Розважайся",
     "facepalm": "Фейспалм",
+    "fake": "Фейк",
+    "get-lost": "Забирайся",
     "get-well": "Одужуй",
     "good-trip": "Приємної подорожі",
     "haha": "Ха-ха",
@@ -582,13 +585,15 @@
     "like": "Подобається",
     "lol": "Ржу",
     "love": "Люблю",
+    "naive": "Наївно",
     "popcorn": "Попкорн",
     "sad": "Сумно",
     "super": "Супер",
     "sweet": "Чарівно",
     "tired": "Втомився",
     "too-long": "Довго",
-    "wow": "Ого"
+    "wow": "Ого",
+    "wrong": "Неправильно"
   },
   "read-and-agree-with": "Я прочитав і погоджуюсь з",
   "read-more": "Читати далі...",
