--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -559,6 +559,7 @@
     "bebe": "Be-be",
     "boring": "Nudne",
     "brilliant": "Błyskotliwe",
+    "chill-out": "Wyluzuj",
     "congrats": "Gratulacje",
     "cry": "Płacz",
     "damn": "Do diabła",
@@ -568,6 +569,8 @@
     "dislike": "Nie lubię",
     "enjoy": "Ciesz się",
     "facepalm": "Facepalm",
+    "fake": "Podróbka",
+    "get-lost": "Spadaj",
     "get-well": "Szybkiego powrotu do zdrowia",
     "good-trip": "Dobrej podróży",
     "haha": "Ha-ha",
@@ -582,13 +585,15 @@
     "like": "Lubię",
     "lol": "LOL",
     "love": "Kocham",
+    "naive": "Naiwna",
     "popcorn": "Popcorn",
     "sad": "Smutny",
     "super": "Super",
     "sweet": "Słodki",
     "tired": "Zmęczony",
     "too-long": "Zbyt długi",
-    "wow": "Wow"
+    "wow": "Wow",
+    "wrong": "Błędny"
   },
   "read-and-agree-with": "Przeczytałem/am i zgadzam się z",
   "read-more": "Czytaj więcej...",
