New design of the list of people on the People page.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -173,7 +173,6 @@
   "description": "Description",
   "description-optional": "Description (optional)",
   "details": "Details",
-  "details-blocking": "Details of blocking",
   "details-blocking-by-name": "Details of blocking by {name}",
   "details-blocking-name": "Details of blocking {name}",
   "disable-all": "Disable all",
@@ -425,6 +424,7 @@
   "must-not-empty": "Must not be empty",
   "must-single-english-word": "Must be a single English word",
   "mutual-friends": "Mutual friends",
+  "mutually": "Mutually",
   "mutually-subscribed": "Mutually subscribed",
   "my-client": "My Client",
   "my-node": "My Blog",
