--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -173,7 +173,6 @@
   "description": "Opis",
   "description-optional": "Opis (opcjonalnie)",
   "details": "Szczegóły",
-  "details-blocking": "Szczegóły blokowania",
   "details-blocking-by-name": "Szczegóły blokowania przez {name}",
   "details-blocking-name": "Szczegóły blokowania {name}",
   "disable-all": "Wyłącz wszystko",
@@ -425,6 +424,7 @@
   "must-not-empty": "Nie może być puste",
   "must-single-english-word": "Musi być pojedynczym angielskim słowem",
   "mutual-friends": "Wspólni znajomi",
+  "mutually": "Wzajemnie",
   "mutually-subscribed": "Wspólnie subskrybowane",
   "my-client": "Mój klient",
   "my-node": "Mój blog",
