--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -173,7 +173,6 @@
   "description": "Опис",
   "description-optional": "Опис (за бажанням)",
   "details": "Подробиці",
-  "details-blocking": "Подробиці блокування",
   "details-blocking-by-name": "Подробиці блокування з боку {name}",
   "details-blocking-name": "Подробиці блокування {name}",
   "disable-all": "Вимкнути все",
@@ -425,6 +424,7 @@
   "must-not-empty": "Обов'язкове поле",
   "must-single-english-word": "Введіть одне англійське слово",
   "mutual-friends": "Взаємні друзі",
+  "mutually": "Взаємно",
   "mutually-subscribed": "Взаємно підписані",
   "my-client": "Мій клієнт",
   "my-node": "Мій блог",
