--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -173,7 +173,6 @@
   "description": "Описание",
   "description-optional": "Описание (необязательно)",
   "details": "Подробности",
-  "details-blocking": "Подробности блокировки",
   "details-blocking-by-name": "Подробности блокировки со стороны {name}",
   "details-blocking-name": "Подробности блокировки {name}",
   "disable-all": "Отключить все",
@@ -425,6 +424,7 @@
   "must-not-empty": "Обязательное поле",
   "must-single-english-word": "Введите одно английское слово",
   "mutual-friends": "Взаимные друзья",
+  "mutually": "Взаимно",
   "mutually-subscribed": "Взаимно подписаны",
   "my-client": "Мой клиент",
   "my-node": "Мой блог",
