Nice message if there are no instants to be displayed.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -457,6 +457,7 @@
   "no-kick": "Do not kick",
   "no-name-known": "no name known",
   "no-name-set": "no name set",
+  "no-notifications": "No notifications",
   "no-requests-available": "No requests available.",
   "normal": "Normal",
   "not-accept-sheriff-governance": "Do not accept sheriff's governance",
@@ -1095,6 +1096,7 @@
   "you-at-home": "You are at your home node",
   "you-can-close-page": "You can close this page now.",
   "you-can-copy-token": "You can now copy your new token. For security reasons, this cannot be done later.",
+  "you-dont-have-any-notifications": "You do not have any notifications yet.",
   "you-friends": "You are friends",
   "you-no-longer-subscribed": "You are no longer subscribed",
   "your-news": "Your news",
