--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -457,6 +457,7 @@
   "no-kick": "Nie wyrzucaj",
   "no-name-known": "nieznana nazwa",
   "no-name-set": "nie ustawiono nazwy",
+  "no-notifications": "Brak powiadomień",
   "no-requests-available": "Brak dostępnych żądań.",
   "normal": "Normalny",
   "not-accept-sheriff-governance": "Nie akceptuj rządów szeryfa",
@@ -1095,6 +1096,7 @@
   "you-at-home": "Jesteś w swoim węźle domowym",
   "you-can-close-page": "Możesz teraz zamknąć tę stronę.",
   "you-can-copy-token": "Możesz teraz skopiować swój nowy token. Ze względów bezpieczeństwa nie będzie to możliwe później.",
+  "you-dont-have-any-notifications": "Nie masz jeszcze żadnych powiadomień.",
   "you-friends": "Jesteście znajomymi",
   "you-no-longer-subscribed": "Nie jesteś już subskrybentem",
   "your-news": "Twoje aktualności",
