--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -457,6 +457,7 @@
   "no-kick": "Не выгонять",
   "no-name-known": "неизвестное имя",
   "no-name-set": "имя не задано",
+  "no-notifications": "Нет уведомлений",
   "no-requests-available": "Нет доступных просьб.",
   "normal": "Обычный",
   "not-accept-sheriff-governance": "Не одобрил присмотр шерифа",
@@ -1095,6 +1096,7 @@
   "you-at-home": "Это ваш домашний блог",
   "you-can-close-page": "Теперь вы можете закрыть эту страницу.",
   "you-can-copy-token": "Сейчас вы можете скопировать ваш новый токен. По соображениям безопасности, это нельзя будет сделать позднее.",
+  "you-dont-have-any-notifications": "У вас пока нет уведомлений.",
   "you-friends": "Вы друзья",
   "you-no-longer-subscribed": "Вы больше не подписаны",
   "your-news": "Ваши новости",
