--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -457,6 +457,7 @@
   "no-kick": "Не виганяти",
   "no-name-known": "невідоме ім'я",
   "no-name-set": "ім'я не задано",
+  "no-notifications": "Немає повідомлень",
   "no-requests-available": "Немає доступних прохань.",
   "normal": "Звичайний",
   "not-accept-sheriff-governance": "Не схвалив нагляд шерифа",
@@ -1095,6 +1096,7 @@
   "you-at-home": "Це ваш домашній блог",
   "you-can-close-page": "Зараз ви можете закрити цю сторінку.",
   "you-can-copy-token": "Зараз ви можете скопіювати ваш новий токен. З міркувань безпеки, це не можна буде зробити пізніше.",
+  "you-dont-have-any-notifications": "У вас ще немає жодних повідомлень.",
   "you-friends": "Ви друзі",
   "you-no-longer-subscribed": "Ви більше не підписані",
   "your-news": "Ваші новини",
