New design of "Go to" button.

--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -266,7 +266,7 @@
   "go-bottom": "Przejdź na dół",
   "go-first-comment": "Przejdź do pierwszego komentarza",
   "go-last-comment": "Przejdź do ostatniego komentarza",
-  "go-to": "Przejdź do...",
+  "go-to": "Przejdź do",
   "go-top": "Przejdź na górę",
   "grant-access": "Przyznanie dostępu",
   "heading": "Nagłówek",
