--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -266,7 +266,7 @@
   "go-bottom": "Перейти вниз",
   "go-first-comment": "Перейти к первому комментарию",
   "go-last-comment": "Перейти к последнему комментарию",
-  "go-to": "Перейти...",
+  "go-to": "Перейти",
   "go-top": "Перейти вверх",
   "grant-access": "Предоставление доступа",
   "heading": "Заголовок",
