--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -266,7 +266,7 @@
   "go-bottom": "Перейти донизу",
   "go-first-comment": "Перейти до першого коментаря",
   "go-last-comment": "Перейти до останнього коментаря",
-  "go-to": "Перейти...",
+  "go-to": "Перейти",
   "go-top": "Перейти догори",
   "grant-access": "Надання доступу",
   "heading": "Заголовок",
