Moved profile editing to Settings.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -220,7 +220,6 @@
   "edit-image": "Edit Image",
   "edit-link-preview": "Edit link preview",
   "edit-post-title": "Edit Post",
-  "edit-profile": "Edit Profile",
   "e-mail": "E-mail",
   "email": "E-mail",
   "email-not-set": "Unfortunately, E-mail address for blog <b>{location}</b> is not set, so automatic password reset is impossible. Please, contact your Moera provider or server owner to find alternative ways to reset the password.",
@@ -427,6 +426,7 @@
   "mutually-subscribed": "Mutually subscribed",
   "my-client": "My Client",
   "my-node": "My Blog",
+  "my-profile": "My Profile",
   "name": "Name",
   "name-already-taken": "Name is already taken. Note that you can add any number to the name (like 'Arthur_42')",
   "name-help": "The name must be 4 - 120 characters long. You may use any Unicode character (including non-Latin alphabets), except whitespace and punctuation. Only this punctuation is allowed:",
@@ -877,11 +877,13 @@
       "appearance": "Appearance",
       "applications": "Applications",
       "comment": "Comment",
+      "language": "Language",
       "moderation": "Moderation",
       "news": "News",
       "notifications": "Notifications",
       "other": "Other",
       "posting": "Post",
+      "profile": "Profile",
       "reactions": "Reactions",
       "removal": "Removal",
       "security": "Security",
