--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -220,7 +220,6 @@
   "edit-image": "Edytuj obraz",
   "edit-link-preview": "Edytuj podgląd linku",
   "edit-post-title": "Edytuj post",
-  "edit-profile": "Edytuj profil",
   "e-mail": "E-mail",
   "email": "E-mail",
   "email-not-set": "Niestety, adres e-mail dla bloga <b>{location}</b> nie został ustawiony, więc automatyczne resetowanie hasła jest niemożliwe. Skontaktuj się z dostawcą Moera lub właścicielem serwera, aby znaleźć alternatywne sposoby resetowania hasła.",
@@ -427,6 +426,7 @@
   "mutually-subscribed": "Wspólnie subskrybowane",
   "my-client": "Mój klient",
   "my-node": "Mój blog",
+  "my-profile": "Mój profil",
   "name": "Nazwa",
   "name-already-taken": "Nazwa jest już zajęta. Zauważ, że możesz dodać do nazwy dowolną liczbę (np. 'Arthur_42')",
   "name-help": "Nazwa musi mieć od 4 do 120 znaków. Możesz używać dowolnego znaku Unicode (w tym niełacińskiego alfabetu), z wyjątkiem białych znaków i interpunkcji. Dozwolona jest tylko ta interpunkcja:",
@@ -877,11 +877,13 @@
       "appearance": "Wygląd",
       "applications": "Aplikacje",
       "comment": "Komentarz",
+      "language": "Język",
       "moderation": "Moderacja",
       "news": "Aktualności",
       "notifications": "Powiadomienia",
       "other": "Inne",
       "posting": "Publikowanie",
+      "profile": "Profil",
       "reactions": "Reakcje",
       "removal": "Usuwanie",
       "security": "Bezpieczeństwo",
