--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -220,7 +220,6 @@
   "edit-image": "Редактировать картинку",
   "edit-link-preview": "Редактировать предпросмотр ссылки",
   "edit-post-title": "Редактировать пост",
-  "edit-profile": "Редактировать профиль",
   "e-mail": "E-mail",
   "email": "Электронная почта",
   "email-not-set": "К сожалению, адрес e-mail для блога <b>{location}</b> не был задан, поэтому автоматический сброс пароля невозможен. Пожалуйста, свяжитесь с вашим провайдером Moera или владельцем сервера, чтобы найти другие пути для сброса пароля.",
@@ -427,6 +426,7 @@
   "mutually-subscribed": "Взаимно подписаны",
   "my-client": "Мой клиент",
   "my-node": "Мой блог",
+  "my-profile": "Мой профиль",
   "name": "Имя",
   "name-already-taken": "Имя уже занято. Но вы можете добавить к имени любое число (например, 'Arthur_42')",
   "name-help": "Имя должно быть длиной от 4 до 120 символов. Вы можете использовать любые символы юникода (включая буквы любого алфавита), кроме пробелов и знаков препинания. Разрешены только такие знаки препинания:",
@@ -877,11 +877,13 @@
       "appearance": "Вид",
       "applications": "Приложения",
       "comment": "Комментарий",
+      "language": "Язык",
       "moderation": "Модерация",
       "news": "Новости",
       "notifications": "Уведомления",
       "other": "Прочее",
       "posting": "Пост",
+      "profile": "Профиль",
       "reactions": "Реакции",
       "removal": "Удаление",
       "security": "Безопасность",
