--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -220,7 +220,6 @@
   "edit-image": "Редагувати картинку",
   "edit-link-preview": "Редагувати перегляд посилання",
   "edit-post-title": "Редагувати пост",
-  "edit-profile": "Редагувати профіль",
   "e-mail": "E-mail",
   "email": "Електронна пошта",
   "email-not-set": "На жаль, адреса e-mail для блогу <b>{location}</b> не була задана, тому автоматичне скидання пароля неможливе. Будь ласка, зв'яжіться з вашим провайдером Moera або власником сервера, щоб знайти інші шляхи для скидання пароля.",
@@ -427,6 +426,7 @@
   "mutually-subscribed": "Взаємно підписані",
   "my-client": "Мій клієнт",
   "my-node": "Мій блог",
+  "my-profile": "Мій профіль",
   "name": "Ім'я",
   "name-already-taken": "Ім'я вже зайняте. Але ви можете додати до імені будь-яке число (наприклад, 'Arthur_42')",
   "name-help": "Ім'я має бути довжиною від 4 до 120 символів. Ви можете скористатись будь-якими символами юнікоду (в тому числі літерами будь-якого алфавіту), окрім пробілів та розділових знаків. Дозволені лише такі розділові знаки:",
@@ -877,11 +877,13 @@
       "appearance": "Вигляд",
       "applications": "Додатки",
       "comment": "Коментар",
+      "language": "Мова",
       "moderation": "Модерація",
       "news": "Новини",
       "notifications": "Повідомлення",
       "other": "Інше",
       "posting": "Пост",
+      "profile": "Профіль",
       "reactions": "Реакції",
       "removal": "Видалення",
       "security": "Безпека",
