--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -38,6 +38,14 @@
   "avatar-set": "Awatar ustawiony",
   "avatar-shape": "Kształt awatara",
   "avatar-too-small": "Rozmiar obrazka awatara powinien wynosić co najmniej 100x100 pikseli.",
+  "back-complaints": "Powrót do skarg",
+  "back-editor": "Powrót do edytora",
+  "back-image": "Powrót do obrazu",
+  "back-people": "Powrót do Ludzie",
+  "back-post": "Powrót do postu",
+  "back-profile": "Powrót do profilu",
+  "back-search": "Powrót do wyszukiwania",
+  "back-settings": "Powrót do ustawień",
   "back-to-feed": "← {feed}",
   "back-to-list-complaints": "← Lista komentarzy",
   "banned-android-google-play": "Zablokowany na Androidzie (Google Play)",
@@ -233,6 +241,10 @@
   "expand": "Rozwiń ↓",
   "expires": "Wygasa:",
   "failure-reason": "Powód niepowodzenia",
+  "feed-back-title": {
+    "news": "Powrót do Aktualności",
+    "timeline": "Powrót do Kroniki"
+  },
   "feed-title": {
     "news": "Aktualności",
     "timeline": "Kronika"
