Title in MobileBack should designate the current page, not the page we're returning to.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -518,6 +518,7 @@
   "popularity-blog-search": "Popularity of Your Blog in Search",
   "post-button": "Publish",
   "post-edited-conflict": "The post was edited by somebody.",
+  "posting": "Post",
   "posting-not-found": "Post is not found or cannot be displayed.",
   "postings": "Posts",
   "posting-updated-at": "updated",
@@ -1000,7 +1001,6 @@
   "token-usage-warning": "Please note that the token gives admin access to your blog. Never give it to anybody you don't trust!",
   "too-long": "Too long",
   "top": "Top",
-  "to-post": "← Post",
   "total-colon": "Total:",
   "transfer": "Transfer",
   "transfer-existing-name": "Transfer an existing name",
