--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -518,6 +518,7 @@
   "popularity-blog-search": "Popularność Twojego bloga w wyszukiwarce",
   "post-button": "Opublikuj",
   "post-edited-conflict": "Post został edytowany przez kogoś innego.",
+  "posting": "Post",
   "posting-not-found": "Nie znaleziono posta lub nie można go wyświetlić.",
   "postings": "Posty",
   "posting-updated-at": "zaktualizowany",
@@ -1000,7 +1001,6 @@
   "token-usage-warning": "Prosimy pamiętać, że token daje dostęp do bloga. Nigdy nie udostępniaj go osobom, którym nie ufasz!",
   "too-long": "Zbyt długi",
   "top": "Góra",
-  "to-post": "← Post",
   "total-colon": "Całkowite",
   "transfer": "Przenieś",
   "transfer-existing-name": "Przenieś istniejącą nazwę",
