--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -518,6 +518,7 @@
   "popularity-blog-search": "Популярность вашего блога в поиске",
   "post-button": "Опубликовать",
   "post-edited-conflict": "Пост был кем-то отредактирован.",
+  "posting": "Пост",
   "posting-not-found": "Пост не найден или не может быть показан.",
   "postings": "Посты",
   "posting-updated-at": "изменён",
@@ -1000,7 +1001,6 @@
   "token-usage-warning": "Имейте в виду, что токен даёт доступ к вашему блогу с правами администратора. Никогда не передавайте его тому, кому вы не доверяете!",
   "too-long": "Слишком длинно",
   "top": "В конец",
-  "to-post": "← Пост",
   "total-colon": "Всего:",
   "transfer": "Переместить",
   "transfer-existing-name": "Переместить существующее имя",
