--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -518,6 +518,7 @@
   "popularity-blog-search": "Популярність вашого блогу в пошуку",
   "post-button": "Опублікувати",
   "post-edited-conflict": "Пост був кимось відредагований.",
+  "posting": "Пост",
   "posting-not-found": "Пост не знайдений або не може бути показаний.",
   "postings": "Пости",
   "posting-updated-at": "змінений",
@@ -1000,7 +1001,6 @@
   "token-usage-warning": "Майте на увазі, що токен дає доступ до вашого блогу з правами адміністратора. Ніколи не передавайте його тому, кому ви не довіряєте!",
   "too-long": "Занадто довго",
   "top": "У кінець",
-  "to-post": "← Пост",
   "total-colon": "Всього:",
   "transfer": "Перемістити",
   "transfer-existing-name": "Перемістити існуюче ім'я",
