New design and navigation on ComplaintsPage.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -38,7 +38,7 @@
   "avatar-set": "Avatar set",
   "avatar-shape": "Avatar shape",
   "avatar-too-small": "Avatar image size should be at least 100x100 pixels.",
-  "back-complaints": "Back to Complaints",
+  "back-complaints": "Back to the list of complaints",
   "back-editor": "Back to Editor",
   "back-image": "Back to Image",
   "back-people": "Back to People",
@@ -47,7 +47,6 @@
   "back-search": "Back to Search",
   "back-settings": "Back to Settings",
   "back-to-feed": "← {feed}",
-  "back-to-list-complaints": "← List of complaints",
   "banned-android-google-play": "Banned on Android (Google Play)",
   "banned-content-android-google-play": "All content banned on Android (Google Play)",
   "bio": "Bio",
@@ -101,6 +100,7 @@
   "comments-visible-to": "Comments are visible to",
   "comment-title": "Comment",
   "comment-updated-at": "updated",
+  "complaint": "Complaint",
   "complaint-heading": {
     "blog": "Blog {name}",
     "comment": "Comment by {commentName} \"{commentHeading}\" in the post by {postingName} \"{postingHeading}\"",
