--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -38,7 +38,7 @@
   "avatar-set": "Аватарка установлена",
   "avatar-shape": "Форма аватарки",
   "avatar-too-small": "Размер картинки для аватарки должен быть хотя бы 100x100 пикселов",
-  "back-complaints": "Назад к жалобам",
+  "back-complaints": "Назад к списку жалоб",
   "back-editor": "Назад в редактор",
   "back-image": "Назад к картинке",
   "back-people": "Назад к Людям",
@@ -47,7 +47,6 @@
   "back-search": "Назад к поиску",
   "back-settings": "Назад к настройкам",
   "back-to-feed": "← {feed}",
-  "back-to-list-complaints": "← Список жалоб",
   "banned-android-google-play": "Запрещено к показу на Android (Google Play)",
   "banned-content-android-google-play": "Весь контент запрещен на Android (Google Play)",
   "bio": "О себе",
@@ -101,6 +100,7 @@
   "comments-visible-to": "Комментарии видны",
   "comment-title": "Комментарий",
   "comment-updated-at": "изменён",
+  "complaint": "Жалоба",
   "complaint-heading": {
     "blog": "Блог {name}",
     "comment": "Комментарий {commentName} \"{commentHeading}\" к посту {postingName} \"{postingHeading}\"",
