--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -38,7 +38,7 @@
   "avatar-set": "Аватар встановлено",
   "avatar-shape": "Форма аватара",
   "avatar-too-small": "Розмір картинки для аватара повинен бути хоча б 100x100 пікселів",
-  "back-complaints": "Назад до скарг",
+  "back-complaints": "Назад до списку скарг",
   "back-editor": "Назад до редактора",
   "back-image": "Назад до картинки",
   "back-people": "Назад до Людей",
@@ -47,7 +47,6 @@
   "back-search": "Назад до пошуку",
   "back-settings": "Назад до налаштувань",
   "back-to-feed": "← {feed}",
-  "back-to-list-complaints": "← Список скарг",
   "banned-android-google-play": "Заборонено до показу на Андроїд (Google Play)",
   "banned-content-android-google-play": "Весь контент заборонений на Android (Google Play)",
   "bio": "Про себе",
@@ -101,6 +100,7 @@
   "comments-visible-to": "Коментарі видно",
   "comment-title": "Коментар",
   "comment-updated-at": "змінений",
+  "complaint": "Скарга",
   "complaint-heading": {
     "blog": "Блог {name}",
     "comment": "Коментар {commentName} \"{commentHeading}\" до поста {postingName} \"{postingHeading}\"",
