--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -38,7 +38,7 @@
   "avatar-set": "Awatar ustawiony",
   "avatar-shape": "Kształt awatara",
   "avatar-too-small": "Rozmiar obrazka awatara powinien wynosić co najmniej 100x100 pikseli.",
-  "back-complaints": "Powrót do skarg",
+  "back-complaints": "Powrót do listy skarg",
   "back-editor": "Powrót do edytora",
   "back-image": "Powrót do obrazu",
   "back-people": "Powrót do Ludzie",
@@ -47,7 +47,6 @@
   "back-search": "Powrót do wyszukiwania",
   "back-settings": "Powrót do ustawień",
   "back-to-feed": "← {feed}",
-  "back-to-list-complaints": "← Lista komentarzy",
   "banned-android-google-play": "Zablokowany na Androidzie (Google Play)",
   "banned-content-android-google-play": "Wszystkie treści zakazane na Androidzie (Google Play)",
   "bio": "Opis",
@@ -101,6 +100,7 @@
   "comments-visible-to": "Komentarze są widoczne dla",
   "comment-title": "Komentarz",
   "comment-updated-at": "zaktualizowany",
+  "complaint": "Skarga",
   "complaint-heading": {
     "blog": "Blog {name}",
     "comment": "Komentarz {commentName} \"{commentHeading}\" do posta {postingName} \"{postingHeading}\"",
