Header with tabs in TimelinePage.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -539,6 +539,9 @@
   },
   "profile": "Profile",
   "profile-edited-conflict": "Profile was edited by somebody.",
+  "profile-tabs": {
+    "posts": "Posts"
+  },
   "progress": "{done} of {total} done",
   "prohibited": "Prohibited",
   "prohibited-to-comment": "commenting",
