--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -539,6 +539,9 @@
   },
   "profile": "Профіль",
   "profile-edited-conflict": "Профіль був кимось відредагований.",
+  "profile-tabs": {
+    "posts": "Пости"
+  },
   "progress": "{done} з {total} зроблено",
   "prohibited": "Заборонено",
   "prohibited-to-comment": "коментувати",
